<resources>
    <string name="app_name">MU-MatriX</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="menu_image_description">Menu Logo</string>
    <string name="title_activity_image_select">Image Selection</string>
    <string name="power_on_button_text">Power ON</string>
    <string name="power_off_button_text">Power OFF</string>
    <string name="brightness_text">Brightness Level:</string>
    <string name="device_name_text">Controlling Device:</string>
    <string name="ping_button_text">Ping</string>
    <string name="ping_button_description">Use this button to test connection</string>
    <string name="left_button_description">Go Left</string>
    <string name="right_button_description">Go Right</string>
    <string name="up_button_description">Move Up</string>
    <string name="down_button_description">Move Down</string>
    <string name="preview_image_description">Slide being previewed</string>
    <string name="selection_image_description">Image loaded from android device</string>
    <string name="row_image_description">Thumbnail for slide selection</string>
    <string name="new_project_title">New Project</string>
    <string name="edit_project_title">Edit Project</string>
    <string name="preview_project_title">Preview Project</string>
    <string name="upload_project_title">Upload Project</string>
    <string name="new_device_title">New Device</string>
    <string name="device_control_title">Device Control</string>
    <string name="about_title">About</string>
    <string name="confirm_button_text">Confirm</string>
    <string name="aspect_switch_text_left">Stretch To Fit</string>
    <string name="aspect_switch_text_right">Fixed Aspect Ratio</string>
    <string name="input_project_name_hint">Project Name</string>
    <string name="create_project_button_text">Create Project</string>
    <string name="please_name_project_text">Please enter a name for the project</string>
    <string name="load_image_button_text">Load Image</string>
    <string name="delete_button_text">X</string>
    <string name="select_device_text">Select Device:</string>
    <string name="upload_project_button_text">Upload Project</string>
    <string name="select_project_text">Select Project:</string>
    <string name="select_text">Select a Project</string>
    <string name="previewing_text">Previewing Project:</string>
    <string name="edit_project_button_text">Edit Project</string>
    <string name="frame_previewed_text">Previewing Slide: 1/8</string>
    <string name="add_device_button_text">Add Device</string>
    <string name="port_number_input_hint">Port Number</string>
    <string name="port_number_prompt_text">Enter the port number of the device</string>
    <string name="ip_address_input_hint">IP Address</string>
    <string name="ip_address_prompt_text">Enter the ip address of the device</string>
    <string name="device_name_input_hint">Device Name</string>
    <string name="device_name_prompt_text">Enter a name for the new device</string>
    <string name="add_frame_button_text">Add a Slide</string>
    <string name="frame_count_text">Current Slide Count:</string>
    <string name="project_name_editing_text">Editing Project: *Project Name*</string>
    <string name="frame_count_numeric_text">0/8</string>
    <string name="button_rotate_clockwise_description">Rotate Image Clockwise</string>
    <string name="image_logo_description">Logo for the App</string>
    <string name="text_rotate_clockwise">Rotate Clockwise</string>
    <string name="controlling_device_text">Controlling Device: %s</string>
    <string name="brightness_level_text">Brightness: %d</string>
    <string name="frame_count_outof_text">%d/8</string>
    <string name="editing_project_text">Editing Project: %s</string>
    <string name="no_images_text">There are not any slides in this project yet</string>
    <string name="previewing_frame_count_text">Previewing Slide: %d/%d</string>
    <string name="image_directory">imageDir</string>
    <string name="selection_text">Select a %s</string>
    <string name="message_received">Message Received</string>
    <string name="resend_message">Resend Message</string>
    <string name="sending_image_text">Sending Slide %d of %d …</string>
    <string name="converting_frame_text">Converting Slide %d of %d …</string>
    <string name="upload_complete">Upload Complete</string>
    <string name="mu_matrix_text">MU-MatriX</string>
    <string name="about_body">Developers:\n\t• Kevin Etta\n\t• Caroline Gilger\n\t• Drew Maatman\n\t• Tuoxuan Ren\n\t• Logan Wedel\nAdvisor: \n\t• Cris Ababei</string>
    <string name="about_sub_body">Marquette University\nSenior Design Project E44</string>
    <string name="upload_proj_button">Upload a Project to Device</string>
    <string name="duration_text">Slide Duration (sec)</string>
    <string name="progress_hint_text">Progress shown below</string>
    <string name="header_title">MU - MatriX</string>
    <string name="preview_project_text">Preview Project: %s</string>
    <string name="frame_num">Slide %d</string>
    <string name="frame_count_num">%d/8</string>
    <string-array name="time_values">
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>20</item>
        <item>25</item>
        <item>30</item>
        <item>45</item>
        <item>60</item>
        <item>120</item>
    </string-array>
</resources>
